--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,25 @@
-<div class="center hero-unit">
+     <% if user_signed_in? %>
+
+
+    	<div class="center hero-unit">
+   		 <h1> You are logedin ! </h1>
+ 		   <p>to <%= link_to 'One Month Rails',  "http://onemonthrails.com" %>
+  		   </p>
+
+  		  <p> <%= link_to 'Sign up now!', new_user_registration_path , class: "btn btn-large btn-primary" %> </p>
+			</div>
+
+        <% else %>
+
+             <div class="center hero-unit">
     <h1>Welcome! </h1>
     <p>to <%= link_to 'One Month Rails',  "http://onemonthrails.com" %>
      </p>
 
-    <p> <%= link_to 'Sign up now!',  "#" , class: "btn btn-large btn-primary" %> </p>
+    <p> <%= link_to 'Sign up now!', new_user_registration_path , class: "btn btn-large btn-primary" %> </p>
 </div>
+
+
+
+                                <% end %>
+
