--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,7 +15,20 @@
                         </li>
                     </ul>
                     <ul class="nav pull-right">
-                                <li><%= link_to 'Login',  '#' %></li>
+                        <% if user_signed_in? %>
+
+
+                                <li><%= link_to 'Logout',  destroy_user_session_path, method: :delete %></li>
+
+                                <% else %>
+
+                                <li><%= link_to 'Login',  new_user_session_path %></li>
+
+
+
+                                <% end %>
+
+
                     </ul>
                 </div>
         </div>
